Fixing spacing in slider

--- a/style.css
+++ b/style.css
@@ -92,12 +92,12 @@ Tags:
 	right: auto !important;
 	transform: none !important;
 	width: max-content !important;
-	margin: var(--wp--preset--spacing--10) auto 0 !important;
+	margin: var(--wp--preset--spacing--tiny) auto 0 !important;
 	padding: 0 !important;
 	display: flex !important;
 	align-items: center !important;
 	justify-content: center !important;
-	gap: var(--wp--preset--spacing--20) !important;
+	gap: var(--wp--preset--spacing--small) !important;
 	list-style: none !important;
 }
 
